--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,12 @@
             </intent-filter>
         </activity>
         <activity android:name=".View.MoviesDetailActivity"/>
+        <provider
+            android:authorities="@string/content_authority"
+            android:name=".Data.MoviesProvider"
+            android:exported="false"
+            android:syncable="true"
+            />
     </application>
 
 </manifest>
